@@ -2,23 +2,31 @@ package com.example.books_api.services;
 
 import com.example.books_api.config.SecurityService;
 import com.example.books_api.dtos.ApiResponse;
-import com.example.books_api.dtos.CartItemResponseDto;
+import com.example.books_api.dtos.book.BookResponseDto;
+import com.example.books_api.dtos.cartItem.CartItemResponseDto;
 import com.example.books_api.dtos.CartResponseDto;
 import com.example.books_api.entities.Book;
 import com.example.books_api.entities.Cart;
 import com.example.books_api.entities.CartItem;
 import com.example.books_api.entities.User;
-import com.example.books_api.exceptions.BookNotFoundException;
-import com.example.books_api.exceptions.UserNotFoundException;
+import com.example.books_api.exceptions.book.BookAlreadyInCartException;
+import com.example.books_api.exceptions.book.BookAlreadyPurchasedException;
+import com.example.books_api.exceptions.book.BookNotFoundException;
+import com.example.books_api.exceptions.cart.CartNotFoundException;
+import com.example.books_api.exceptions.cart.EmptyCartException;
+import com.example.books_api.mapper.BookMapper;
+import com.example.books_api.mapper.CartItemMapper;
 import com.example.books_api.respsitories.BookRepository;
 import com.example.books_api.respsitories.CartRepository;
 import com.example.books_api.respsitories.UserRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,31 +36,39 @@ public class CartService {
     private final CartRepository cartRepository;
     private final BookRepository bookRepository;
     private final UserRepository userRepository;
+    private final BookMapper bookMapper;
 
     private final SecurityService securityService;
+    private final CartItemMapper cartItemMapper;
 
+    // Helper: Centralized logic to get the current user's cart
+    private Cart getCartForCurrentUser() {
+        String email = securityService.getCurrentUserEmail();
+        return cartRepository.findByUserEmail(email)
+                .orElseThrow(() -> new CartNotFoundException("Cart not found for user: " + email));
+    }
 
-    public ApiResponse addToCart(Long bookId) {  // TODO: return DTOs
-        // 1. Get current user
-        String email = securityService.getCurrentUserEmail();   // SecurityContextHolder.getContext().getAuthentication().getName();
+    // Helper
+    private Book getBookById(Long bookId) {
+        return bookRepository.findById(bookId)
+                .orElseThrow(() -> new BookNotFoundException("Book not found with id: " + bookId));
+    }
 
-        Cart cart = cartRepository.findByUserEmail(email)
-                .orElseThrow(() -> new UserNotFoundException("Cart was not found"));
+    @Transactional
+    public BookResponseDto addToCart(Long bookId) {  // TODO: return DTOs
 
-        Book book = bookRepository.findById(bookId)
-                .orElseThrow(() -> new BookNotFoundException("Book was not found"));
+        Cart cart = getCartForCurrentUser();
+        Book book = getBookById(bookId);
 
-        boolean alreadyPurchased = cart.getUser().getPurchasedBooks().contains(book);
-
-        if (alreadyPurchased) {
-            throw new RuntimeException("that book is already purchased");
+        if (cart.getUser().getPurchasedBooks().contains(book)) {
+            throw new BookAlreadyPurchasedException("that book is already purchased");
         }
 
         boolean alreadyInCart = cart.getItems().stream()
                         .anyMatch(i -> i.getBook().getId().equals(bookId));
 
         if (alreadyInCart) {
-            throw new RuntimeException("Book already in cart");
+            throw new BookAlreadyInCartException("Book already in cart");
         }
 
         CartItem item = CartItem.builder()
@@ -63,71 +79,62 @@ public class CartService {
         cart.getItems().add(item);
         cartRepository.save(cart);
 
-        return new ApiResponse("Book added to cart", book);
+        return bookMapper.toResponseDto(book);
     }
 
+    @Transactional
     public ApiResponse deleteFromCart(Long bookId) {
-
-        String email = securityService.getCurrentUserEmail();
-        Cart cart = cartRepository.findByUserEmail(email)
-                .orElseThrow(() -> new RuntimeException("Cart not found"));
+        Cart cart = getCartForCurrentUser();
 
         boolean removed = cart.getItems().removeIf(i -> i.getBook().getId().equals(bookId));
 
-
         if (!removed) {
-            throw new RuntimeException("Book with ID " + bookId + " was not found in your cart");
+            throw new BookNotFoundException("Book with ID " + bookId + " was not found in your cart");
         }
         cartRepository.save(cart);
         return new ApiResponse("Book removed from cart with id", bookId);
     }
 
+    @Transactional
     public ApiResponse clearCart() {
-        String email = securityService.getCurrentUserEmail();
-        Cart cart = cartRepository.findByUserEmail(email)
-                .orElseThrow(() -> new RuntimeException("Cart not found"));
+
+        Cart cart = getCartForCurrentUser();
 
         cart.getItems().clear();
         cartRepository.save(cart);
 
-        return new ApiResponse("Cart cleared for user", email);
+        return new ApiResponse("Cart cleared for user", securityService.getCurrentUserEmail());
     }
 
-    public ApiResponse getAllCart() {
-        String email = securityService.getCurrentUserEmail();
-        Cart cart = cartRepository.findByUserEmail(email)
-                .orElseThrow(() -> new RuntimeException("Cart not found"));
+    @Transactional(readOnly = true)
+    public CartResponseDto getAllCart() {
+        Cart cart = getCartForCurrentUser();
 
         List<CartItemResponseDto> items = cart.getItems().stream()
-                .map(item  -> new CartItemResponseDto(item.getBook().getId(),
-                        item.getBook().getTitle(),
-                        item.getBook().getAuthor(),
-                        item.getBook().getPrice())).collect(Collectors.toList());
+                .map(cartItemMapper::toResponseDto).toList(); // TODO: create/use mapper, Done
 
         double totalPrice = items.stream().mapToDouble(CartItemResponseDto::getPrice).sum();
 
-        CartResponseDto response = new CartResponseDto(cart.getId(), items, totalPrice);
-
-        return new ApiResponse("cart", response);
+        return new CartResponseDto(cart.getId(), items, totalPrice);
+       // return cartMapper.toResponseDto(getCartForCurrentUser());
     }
 
     @Transactional
     public ApiResponse purchaseFromCart(){
-        String email = securityService.getCurrentUserEmail();
 
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        Cart cart = cartRepository.findByUserEmail(email)
-                .orElseThrow(() -> new RuntimeException("Cart was not found"));
+        Cart cart = getCartForCurrentUser();
+        User user = cart.getUser();
 
         if (cart.getItems().isEmpty()) {
-            throw new RuntimeException("Cart is empty");
+            throw new EmptyCartException("Cannot purchase an empty cart.");
         }
+
+        List<BookResponseDto> purchasedBooks = new ArrayList<>();
 
         for (CartItem cartItem : cart.getItems()){
             Book book = cartItem.getBook();
             if (!user.getPurchasedBooks().contains(book)) {
+                purchasedBooks.add(bookMapper.toResponseDto(book));
                 user.getPurchasedBooks().add(book);
             }
         }
@@ -136,6 +143,6 @@ public class CartService {
         userRepository.save(user);
         cartRepository.save(cart);
 
-        return new ApiResponse("Purchase success", user.getPurchasedBooks());
+        return new ApiResponse("Purchase success", purchasedBooks);
     }
 }
